Downgrade to v2023.8 for Java 17 compatibility